# Doc_recognition_disco

./: .gitignore  ImgCleaner.py  README.md  main.py  pyproject.toml  test_image_cleaner.py
Dataset_classes/: DocDataset.py
Training/: LitModule.py
img_preproc/: CleanerIMG.py  FindsLinesIMG.py  StandardizationIMG.py
